[gd_scene load_steps=7 format=3 uid="uid://bjw5cktr3vtp3"]

[ext_resource type="Script" uid="uid://dqswhf4xlm4ax" path="res://game/scripts/block.gd" id="1_fjkqq"]
[ext_resource type="AudioStream" uid="uid://can6no4a3vqjq" path="res://sounds/fx/block_pick_up.mp3" id="2_8xjj3"]
[ext_resource type="AudioStream" uid="uid://ci56o1wtkse1a" path="res://sounds/fx/block_place.mp3" id="3_1p461"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_u2g7i"]
friction = 0.8
bounce = 0.1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gtp3f"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xpavh"]
size = Vector2(70, 70)

[node name="Block" type="RigidBody2D" groups=["pickable_blocks"]]
collision_layer = 3
collision_mask = 7
mass = 5.0
physics_material_override = SubResource("PhysicsMaterial_u2g7i")
lock_rotation = true
script = ExtResource("1_fjkqq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_gtp3f")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
color = Color(0.521569, 0.368627, 0.243137, 1)

[node name="Outline" type="ColorRect" parent="."]
z_index = -1
offset_left = -33.0
offset_top = -33.0
offset_right = 33.0
offset_bottom = 33.0
color = Color(0.235294, 0.168627, 0.121569, 1)

[node name="PlacementPreview" type="ColorRect" parent="."]
visible = false
z_index = 1
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
color = Color(0.521569, 0.368627, 0.243137, 0.392157)

[node name="GroundIndicator" type="ColorRect" parent="."]
z_index = -1
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
color = Color(1, 1, 1, 0.196078)

[node name="PickupIndicator" type="ColorRect" parent="."]
visible = false
z_index = 1
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
color = Color(1, 0.921569, 0.054902, 0.3)

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("RectangleShape2D_xpavh")

[node name="PickupPosition" type="Marker2D" parent="."]

[node name="PickUpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_8xjj3")

[node name="PlaceDownSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_1p461")
